tests/spectest/call_indirect.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\98\81\80\80\00\1d\60"
  "\00\00\60\00\01\7f\60\00\01\7e\60\00\01\7d\60\00"
  "\01\7c\60\00\02\7c\7f\60\01\7f\01\7f\60\01\7e\01"
  "\7e\60\01\7d\01\7d\60\01\7c\01\7c\60\02\7f\7c\02"
  "\7f\7c\60\02\7f\7e\02\7e\7f\60\02\7d\7f\01\7f\60"
  "\02\7f\7e\01\7e\60\02\7c\7d\01\7d\60\02\7e\7c\01"
  "\7c\60\01\7f\01\7f\60\01\7e\01\7e\60\01\7d\01\7d"
  "\60\01\7c\01\7c\60\04\7e\7c\7f\7e\01\7f\60\01\7e"
  "\01\7f\60\04\7e\7c\7f\7e\00\60\01\7e\00\60\00\02"
  "\7f\7c\60\00\02\7e\7f\60\01\7f\01\7e\60\01\7f\01"
  "\7d\60\01\7f\01\7c\03\d1\80\80\80\00\50\01\02\03"
  "\04\05\06\07\08\09\0a\0b\0d\0f\0c\0e\10\11\12\13"
  "\00\01\02\03\04\05\02\01\02\03\04\01\02\03\04\05"
  "\18\19\0d\1a\06\1b\1c\07\07\06\08\09\06\08\09\06"
  "\06\00\00\00\01\01\01\01\02\01\03\01\00\00\01\01"
  "\00\03\04\04\04\01\03\01\01\01\01\01\02\04\85\80"
  "\80\80\00\01\70\01\20\20\05\83\80\80\80\00\01\00"
  "\01\06\8d\80\80\80\00\01\7c\01\44\00\00\00\00\00"
  "\00\24\40\0b\07\c4\87\80\80\00\3b\08\74\79\70\65"
  "\2d\69\33\32\00\14\08\74\79\70\65\2d\69\36\34\00"
  "\15\08\74\79\70\65\2d\66\33\32\00\16\08\74\79\70"
  "\65\2d\66\36\34\00\17\0c\74\79\70\65\2d\66\36\34"
  "\2d\69\33\32\00\18\0a\74\79\70\65\2d\69\6e\64\65"
  "\78\00\19\0e\74\79\70\65\2d\66\69\72\73\74\2d\69"
  "\33\32\00\1a\0e\74\79\70\65\2d\66\69\72\73\74\2d"
  "\69\36\34\00\1b\0e\74\79\70\65\2d\66\69\72\73\74"
  "\2d\66\33\32\00\1c\0e\74\79\70\65\2d\66\69\72\73"
  "\74\2d\66\36\34\00\1d\0f\74\79\70\65\2d\73\65\63"
  "\6f\6e\64\2d\69\33\32\00\1e\0f\74\79\70\65\2d\73"
  "\65\63\6f\6e\64\2d\69\36\34\00\1f\0f\74\79\70\65"
  "\2d\73\65\63\6f\6e\64\2d\66\33\32\00\20\0f\74\79"
  "\70\65\2d\73\65\63\6f\6e\64\2d\66\36\34\00\21\10"
  "\74\79\70\65\2d\61\6c\6c\2d\66\36\34\2d\69\33\32"
  "\00\22\10\74\79\70\65\2d\61\6c\6c\2d\69\33\32\2d"
  "\66\36\34\00\23\10\74\79\70\65\2d\61\6c\6c\2d\69"
  "\33\32\2d\69\36\34\00\24\08\64\69\73\70\61\74\63"
  "\68\00\25\17\64\69\73\70\61\74\63\68\2d\73\74\72"
  "\75\63\74\75\72\61\6c\2d\69\36\34\00\26\17\64\69"
  "\73\70\61\74\63\68\2d\73\74\72\75\63\74\75\72\61"
  "\6c\2d\69\33\32\00\27\17\64\69\73\70\61\74\63\68"
  "\2d\73\74\72\75\63\74\75\72\61\6c\2d\66\33\32\00"
  "\28\17\64\69\73\70\61\74\63\68\2d\73\74\72\75\63"
  "\74\75\72\61\6c\2d\66\36\34\00\29\07\66\61\63\2d"
  "\69\36\34\00\2a\07\66\69\62\2d\69\36\34\00\2b\07"
  "\66\61\63\2d\69\33\32\00\2c\07\66\61\63\2d\66\33"
  "\32\00\2d\07\66\61\63\2d\66\36\34\00\2e\07\66\69"
  "\62\2d\69\33\32\00\2f\07\66\69\62\2d\66\33\32\00"
  "\30\07\66\69\62\2d\66\36\34\00\31\04\65\76\65\6e"
  "\00\32\03\6f\64\64\00\33\07\72\75\6e\61\77\61\79"
  "\00\34\0e\6d\75\74\75\61\6c\2d\72\75\6e\61\77\61"
  "\79\00\35\0f\61\73\2d\73\65\6c\65\63\74\2d\66\69"
  "\72\73\74\00\37\0d\61\73\2d\73\65\6c\65\63\74\2d"
  "\6d\69\64\00\38\0e\61\73\2d\73\65\6c\65\63\74\2d"
  "\6c\61\73\74\00\39\0f\61\73\2d\69\66\2d\63\6f\6e"
  "\64\69\74\69\6f\6e\00\3a\0e\61\73\2d\62\72\5f\69"
  "\66\2d\66\69\72\73\74\00\3b\0d\61\73\2d\62\72\5f"
  "\69\66\2d\6c\61\73\74\00\3c\11\61\73\2d\62\72\5f"
  "\74\61\62\6c\65\2d\66\69\72\73\74\00\3d\10\61\73"
  "\2d\62\72\5f\74\61\62\6c\65\2d\6c\61\73\74\00\3e"
  "\0e\61\73\2d\73\74\6f\72\65\2d\66\69\72\73\74\00"
  "\3f\0d\61\73\2d\73\74\6f\72\65\2d\6c\61\73\74\00"
  "\40\14\61\73\2d\6d\65\6d\6f\72\79\2e\67\72\6f\77"
  "\2d\76\61\6c\75\65\00\41\0f\61\73\2d\72\65\74\75"
  "\72\6e\2d\76\61\6c\75\65\00\42\0f\61\73\2d\64\72"
  "\6f\70\2d\6f\70\65\72\61\6e\64\00\43\0b\61\73\2d"
  "\62\72\2d\76\61\6c\75\65\00\44\12\61\73\2d\6c\6f"
  "\63\61\6c\2e\73\65\74\2d\76\61\6c\75\65\00\45\12"
  "\61\73\2d\6c\6f\63\61\6c\2e\74\65\65\2d\76\61\6c"
  "\75\65\00\46\13\61\73\2d\67\6c\6f\62\61\6c\2e\73"
  "\65\74\2d\76\61\6c\75\65\00\47\0f\61\73\2d\6c\6f"
  "\61\64\2d\6f\70\65\72\61\6e\64\00\48\10\61\73\2d"
  "\75\6e\61\72\79\2d\6f\70\65\72\61\6e\64\00\49\0e"
  "\61\73\2d\62\69\6e\61\72\79\2d\6c\65\66\74\00\4a"
  "\0f\61\73\2d\62\69\6e\61\72\79\2d\72\69\67\68\74"
  "\00\4b\0f\61\73\2d\74\65\73\74\2d\6f\70\65\72\61"
  "\6e\64\00\4c\0f\61\73\2d\63\6f\6d\70\61\72\65\2d"
  "\6c\65\66\74\00\4d\10\61\73\2d\63\6f\6d\70\61\72"
  "\65\2d\72\69\67\68\74\00\4e\12\61\73\2d\63\6f\6e"
  "\76\65\72\74\2d\6f\70\65\72\61\6e\64\00\4f\09\e6"
  "\80\80\80\00\01\04\41\00\0b\20\d2\00\0b\d2\01\0b"
  "\d2\02\0b\d2\03\0b\d2\05\0b\d2\06\0b\d2\07\0b\d2"
  "\08\0b\d2\0d\0b\d2\0b\0b\d2\0e\0b\d2\0c\0b\d2\2a"
  "\0b\d2\2b\0b\d2\32\0b\d2\33\0b\d2\34\0b\d2\35\0b"
  "\d2\36\0b\d2\0f\0b\d2\10\0b\d2\11\0b\d2\12\0b\d2"
  "\2c\0b\d2\2d\0b\d2\2e\0b\d2\2f\0b\d2\30\0b\d2\31"
  "\0b\d2\04\0b\d2\09\0b\d2\0a\0b\0a\a1\8c\80\80\00"
  "\50\85\80\80\80\00\00\41\b2\02\0b\85\80\80\80\00"
  "\00\42\e4\02\0b\87\80\80\80\00\00\43\00\20\73\45"
  "\0b\8b\80\80\80\00\00\44\00\00\00\00\00\c8\ae\40"
  "\0b\8d\80\80\80\00\00\44\00\00\00\00\00\c8\ae\40"
  "\41\20\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80"
  "\80\80\00\00\20\00\0b\86\80\80\80\00\00\20\00\20"
  "\01\0b\86\80\80\80\00\00\20\01\20\00\0b\84\80\80"
  "\80\00\00\20\01\0b\84\80\80\80\00\00\20\01\0b\84"
  "\80\80\80\00\00\20\01\0b\84\80\80\80\00\00\20\01"
  "\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80\00\00"
  "\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\dd\80\80\80\00\00\41\00\11\00\00"
  "\42\00\41\00\11\17\00\42\00\44\00\00\00\00\00\00"
  "\00\00\41\00\42\00\41\00\11\16\00\41\00\11\00\00"
  "\41\00\11\01\00\45\1a\41\00\11\01\00\45\1a\42\00"
  "\41\00\11\15\00\45\1a\42\00\44\00\00\00\00\00\00"
  "\00\00\41\00\42\00\41\00\11\14\00\45\1a\42\00\41"
  "\00\11\07\00\50\1a\0b\87\80\80\80\00\00\41\00\11"
  "\01\00\0b\87\80\80\80\00\00\41\01\11\02\00\0b\87"
  "\80\80\80\00\00\41\02\11\03\00\0b\87\80\80\80\00"
  "\00\41\03\11\04\00\0b\87\80\80\80\00\00\41\1d\11"
  "\05\00\0b\8a\80\80\80\00\00\42\e4\00\41\05\11\07"
  "\00\0b\89\80\80\80\00\00\41\20\41\04\11\06\00\0b"
  "\8a\80\80\80\00\00\42\c0\00\41\05\11\07\00\0b\8c"
  "\80\80\80\00\00\43\c3\f5\a8\3f\41\06\11\08\00\0b"
  "\90\80\80\80\00\00\44\3d\0a\d7\a3\70\3d\fa\3f\41"
  "\07\11\09\00\0b\8e\80\80\80\00\00\43\66\66\00\42"
  "\41\20\41\08\11\0c\00\0b\8c\80\80\80\00\00\41\20"
  "\42\c0\00\41\09\11\0d\00\0b\95\80\80\80\00\00\44"
  "\00\00\00\00\00\00\50\40\43\00\00\00\42\41\0a\11"
  "\0e\00\0b\93\80\80\80\00\00\42\c0\00\44\66\66\66"
  "\66\66\06\50\40\41\0b\11\0f\00\0b\87\80\80\80\00"
  "\00\41\1d\11\05\00\0b\92\80\80\80\00\00\41\01\44"
  "\00\00\00\00\00\00\00\40\41\1e\11\0a\00\0b\8b\80"
  "\80\80\00\00\41\01\42\02\41\1f\11\0b\00\0b\89\80"
  "\80\80\00\00\20\01\20\00\11\07\00\0b\89\80\80\80"
  "\00\00\42\09\20\00\11\11\00\0b\89\80\80\80\00\00"
  "\41\09\20\00\11\10\00\0b\8c\80\80\80\00\00\43\00"
  "\00\10\41\20\00\11\12\00\0b\90\80\80\80\00\00\44"
  "\00\00\00\00\00\00\22\40\20\00\11\13\00\0b\98\80"
  "\80\80\00\00\20\00\50\04\7e\42\01\05\20\00\20\00"
  "\42\01\7d\41\0c\11\07\00\7e\0b\0b\a2\80\80\80\00"
  "\00\20\00\42\01\58\04\7e\42\01\05\20\00\42\02\7d"
  "\41\0d\11\07\00\20\00\42\01\7d\41\0d\11\07\00\7c"
  "\0b\0b\98\80\80\80\00\00\20\00\45\04\7f\41\01\05"
  "\20\00\20\00\41\01\6b\41\17\11\06\00\6c\0b\0b\a3"
  "\80\80\80\00\00\20\00\43\00\00\00\00\5b\04\7d\43"
  "\00\00\80\3f\05\20\00\20\00\43\00\00\80\3f\93\41"
  "\18\11\08\00\94\0b\0b\af\80\80\80\00\00\20\00\44"
  "\00\00\00\00\00\00\00\00\61\04\7c\44\00\00\00\00"
  "\00\00\f0\3f\05\20\00\20\00\44\00\00\00\00\00\00"
  "\f0\3f\a1\41\19\11\09\00\a2\0b\0b\a2\80\80\80\00"
  "\00\20\00\41\01\4d\04\7f\41\01\05\20\00\41\02\6b"
  "\41\1a\11\06\00\20\00\41\01\6b\41\1a\11\06\00\6a"
  "\0b\0b\ae\80\80\80\00\00\20\00\43\00\00\80\3f\5f"
  "\04\7d\43\00\00\80\3f\05\20\00\43\00\00\00\40\93"
  "\41\1b\11\08\00\20\00\43\00\00\80\3f\93\41\1b\11"
  "\08\00\92\0b\0b\be\80\80\80\00\00\20\00\44\00\00"
  "\00\00\00\00\f0\3f\65\04\7c\44\00\00\00\00\00\00"
  "\f0\3f\05\20\00\44\00\00\00\00\00\00\00\40\a1\41"
  "\1c\11\09\00\20\00\44\00\00\00\00\00\00\f0\3f\a1"
  "\41\1c\11\09\00\a0\0b\0b\95\80\80\80\00\00\20\00"
  "\45\04\7f\41\2c\05\20\00\41\01\6b\41\0f\11\06\00"
  "\0b\0b\96\80\80\80\00\00\20\00\45\04\7f\41\e3\00"
  "\05\20\00\41\01\6b\41\0e\11\06\00\0b\0b\87\80\80"
  "\80\00\00\41\10\11\00\00\0b\87\80\80\80\00\00\41"
  "\12\11\00\00\0b\87\80\80\80\00\00\41\11\11\00\00"
  "\0b\8c\80\80\80\00\00\41\00\11\01\00\41\02\41\03"
  "\1b\0b\8c\80\80\80\00\00\41\02\41\00\11\01\00\41"
  "\03\1b\0b\8c\80\80\80\00\00\41\02\41\03\41\00\11"
  "\01\00\1b\0b\8f\80\80\80\00\00\41\00\11\01\00\04"
  "\7f\41\01\05\41\02\0b\0b\8e\80\80\80\00\00\02\7e"
  "\41\01\11\02\00\41\02\0d\00\0b\0b\8e\80\80\80\00"
  "\00\02\7f\41\02\41\00\11\01\00\0d\00\0b\0b\90\80"
  "\80\80\00\00\02\7d\41\02\11\03\00\41\02\0e\01\00"
  "\00\0b\0b\90\80\80\80\00\00\02\7f\41\02\41\00\11"
  "\01\00\0e\01\00\00\0b\0b\8c\80\80\80\00\00\41\00"
  "\11\01\00\41\01\36\02\00\0b\8c\80\80\80\00\00\41"
  "\0a\41\03\11\04\00\39\03\00\0b\89\80\80\80\00\00"
  "\41\00\11\01\00\40\00\0b\8a\80\80\80\00\00\41\01"
  "\41\04\11\06\00\0f\0b\8a\80\80\80\00\00\42\01\41"
  "\05\11\07\00\1a\0b\91\80\80\80\00\00\02\7d\43\00"
  "\00\80\3f\41\06\11\08\00\0c\00\0b\0b\96\80\80\80"
  "\00\01\01\7c\44\00\00\00\00\00\00\f0\3f\41\07\11"
  "\09\00\21\00\20\00\0b\94\80\80\80\00\01\01\7c\44"
  "\00\00\00\00\00\00\f0\3f\41\07\11\09\00\22\00\0b"
  "\94\80\80\80\00\00\44\00\00\00\00\00\00\f0\3f\41"
  "\07\11\09\00\24\00\23\00\0b\8a\80\80\80\00\00\41"
  "\00\11\01\00\28\02\00\0b\90\80\80\80\00\00\02\7d"
  "\43\00\00\00\00\41\06\11\08\00\91\0b\0b\8f\80\80"
  "\80\00\00\02\7f\41\01\41\04\11\06\00\41\0a\6a\0b"
  "\0b\8f\80\80\80\00\00\02\7f\41\0a\41\01\41\04\11"
  "\06\00\6b\0b\0b\8d\80\80\80\00\00\02\7f\41\01\41"
  "\04\11\06\00\45\0b\0b\8f\80\80\80\00\00\02\7f\41"
  "\01\41\04\11\06\00\41\0a\4d\0b\0b\8f\80\80\80\00"
  "\00\02\7f\41\0a\41\01\41\04\11\06\00\47\0b\0b\8d"
  "\80\80\80\00\00\02\7e\41\01\41\04\11\06\00\ac\0b"
  "\0b"
)
(module instance)
(assert_return (invoke "type-i32") (i32.const 0x132))
(assert_return (invoke "type-i64") (i64.const 0x164))
(assert_return (invoke "type-f32") (f32.const 0x1.e64p+11))
(assert_return (invoke "type-f64") (f64.const 0x1.ec8p+11))
(assert_return (invoke "type-f64-i32") (f64.const 0x1.ec8p+11) (i32.const 0x20))
(assert_return (invoke "type-index") (i64.const 0x64))
(assert_return (invoke "type-first-i32") (i32.const 0x20))
(assert_return (invoke "type-first-i64") (i64.const 0x40))
(assert_return (invoke "type-first-f32") (f32.const 0x1.51eb_86p+0))
(assert_return (invoke "type-first-f64") (f64.const 0x1.a3d7_0a3d_70a3_dp+0))
(assert_return (invoke "type-second-i32") (i32.const 0x20))
(assert_return (invoke "type-second-i64") (i64.const 0x40))
(assert_return (invoke "type-second-f32") (f32.const 0x1p+5))
(assert_return (invoke "type-second-f64") (f64.const 0x1.0066_6666_6666_6p+6))
(assert_return
  (invoke "type-all-f64-i32")
  (f64.const 0x1.ec8p+11)
  (i32.const 0x20)
)
(assert_return (invoke "type-all-i32-f64") (i32.const 0x1) (f64.const 0x1p+1))
(assert_return (invoke "type-all-i32-i64") (i64.const 0x2) (i32.const 0x1))
(assert_return
  (invoke "dispatch" (i32.const 0x5) (i64.const 0x2))
  (i64.const 0x2)
)
(assert_return
  (invoke "dispatch" (i32.const 0x5) (i64.const 0x5))
  (i64.const 0x5)
)
(assert_return
  (invoke "dispatch" (i32.const 0xc) (i64.const 0x5))
  (i64.const 0x78)
)
(assert_return
  (invoke "dispatch" (i32.const 0xd) (i64.const 0x5))
  (i64.const 0x8)
)
(assert_return
  (invoke "dispatch" (i32.const 0x14) (i64.const 0x2))
  (i64.const 0x2)
)
(assert_trap
  (invoke "dispatch" (i32.const 0x0) (i64.const 0x2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 0xf) (i64.const 0x2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 0x20) (i64.const 0x2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 0xffff_ffff) (i64.const 0x2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 0x4853_8267) (i64.const 0x2))
  "undefined element"
)
(assert_return
  (invoke "dispatch-structural-i64" (i32.const 0x5))
  (i64.const 0x9)
)
(assert_return
  (invoke "dispatch-structural-i64" (i32.const 0xc))
  (i64.const 0x5_8980)
)
(assert_return
  (invoke "dispatch-structural-i64" (i32.const 0xd))
  (i64.const 0x37)
)
(assert_return
  (invoke "dispatch-structural-i64" (i32.const 0x14))
  (i64.const 0x9)
)
(assert_trap
  (invoke "dispatch-structural-i64" (i32.const 0xb))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-i64" (i32.const 0x16))
  "indirect call type mismatch"
)
(assert_return
  (invoke "dispatch-structural-i32" (i32.const 0x4))
  (i32.const 0x9)
)
(assert_return
  (invoke "dispatch-structural-i32" (i32.const 0x17))
  (i32.const 0x5_8980)
)
(assert_return
  (invoke "dispatch-structural-i32" (i32.const 0x1a))
  (i32.const 0x37)
)
(assert_return
  (invoke "dispatch-structural-i32" (i32.const 0x13))
  (i32.const 0x9)
)
(assert_trap
  (invoke "dispatch-structural-i32" (i32.const 0x9))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-i32" (i32.const 0x15))
  "indirect call type mismatch"
)
(assert_return
  (invoke "dispatch-structural-f32" (i32.const 0x6))
  (f32.const 0x1.2p+3)
)
(assert_return
  (invoke "dispatch-structural-f32" (i32.const 0x18))
  (f32.const 0x1.626p+18)
)
(assert_return
  (invoke "dispatch-structural-f32" (i32.const 0x1b))
  (f32.const 0x1.b8p+5)
)
(assert_return
  (invoke "dispatch-structural-f32" (i32.const 0x15))
  (f32.const 0x1.2p+3)
)
(assert_trap
  (invoke "dispatch-structural-f32" (i32.const 0x8))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-f32" (i32.const 0x13))
  "indirect call type mismatch"
)
(assert_return
  (invoke "dispatch-structural-f64" (i32.const 0x7))
  (f64.const 0x1.2p+3)
)
(assert_return
  (invoke "dispatch-structural-f64" (i32.const 0x19))
  (f64.const 0x1.626p+18)
)
(assert_return
  (invoke "dispatch-structural-f64" (i32.const 0x1c))
  (f64.const 0x1.b8p+5)
)
(assert_return
  (invoke "dispatch-structural-f64" (i32.const 0x16))
  (f64.const 0x1.2p+3)
)
(assert_trap
  (invoke "dispatch-structural-f64" (i32.const 0xa))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural-f64" (i32.const 0x12))
  "indirect call type mismatch"
)
(assert_return (invoke "fac-i64" (i64.const 0x0)) (i64.const 0x1))
(assert_return (invoke "fac-i64" (i64.const 0x1)) (i64.const 0x1))
(assert_return (invoke "fac-i64" (i64.const 0x5)) (i64.const 0x78))
(assert_return
  (invoke "fac-i64" (i64.const 0x19))
  (i64.const 0x619f_b090_7bc0_0000)
)
(assert_return (invoke "fac-i32" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "fac-i32" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "fac-i32" (i32.const 0x5)) (i32.const 0x78))
(assert_return (invoke "fac-i32" (i32.const 0xa)) (i32.const 0x37_5f00))
(assert_return (invoke "fac-f32" (f32.const 0x0p+0)) (f32.const 0x1p+0))
(assert_return (invoke "fac-f32" (f32.const 0x1p+0)) (f32.const 0x1p+0))
(assert_return (invoke "fac-f32" (f32.const 0x1.4p+2)) (f32.const 0x1.ep+6))
(assert_return (invoke "fac-f32" (f32.const 0x1.4p+3)) (f32.const 0x1.baf8p+21))
(assert_return (invoke "fac-f64" (f64.const 0x0p+0)) (f64.const 0x1p+0))
(assert_return (invoke "fac-f64" (f64.const 0x1p+0)) (f64.const 0x1p+0))
(assert_return (invoke "fac-f64" (f64.const 0x1.4p+2)) (f64.const 0x1.ep+6))
(assert_return (invoke "fac-f64" (f64.const 0x1.4p+3)) (f64.const 0x1.baf8p+21))
(assert_return (invoke "fib-i64" (i64.const 0x0)) (i64.const 0x1))
(assert_return (invoke "fib-i64" (i64.const 0x1)) (i64.const 0x1))
(assert_return (invoke "fib-i64" (i64.const 0x2)) (i64.const 0x2))
(assert_return (invoke "fib-i64" (i64.const 0x5)) (i64.const 0x8))
(assert_return (invoke "fib-i64" (i64.const 0x14)) (i64.const 0x2ac2))
(assert_return (invoke "fib-i32" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "fib-i32" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "fib-i32" (i32.const 0x2)) (i32.const 0x2))
(assert_return (invoke "fib-i32" (i32.const 0x5)) (i32.const 0x8))
(assert_return (invoke "fib-i32" (i32.const 0x14)) (i32.const 0x2ac2))
(assert_return (invoke "fib-f32" (f32.const 0x0p+0)) (f32.const 0x1p+0))
(assert_return (invoke "fib-f32" (f32.const 0x1p+0)) (f32.const 0x1p+0))
(assert_return (invoke "fib-f32" (f32.const 0x1p+1)) (f32.const 0x1p+1))
(assert_return (invoke "fib-f32" (f32.const 0x1.4p+2)) (f32.const 0x1p+3))
(assert_return (invoke "fib-f32" (f32.const 0x1.4p+4)) (f32.const 0x1.561p+13))
(assert_return (invoke "fib-f64" (f64.const 0x0p+0)) (f64.const 0x1p+0))
(assert_return (invoke "fib-f64" (f64.const 0x1p+0)) (f64.const 0x1p+0))
(assert_return (invoke "fib-f64" (f64.const 0x1p+1)) (f64.const 0x1p+1))
(assert_return (invoke "fib-f64" (f64.const 0x1.4p+2)) (f64.const 0x1p+3))
(assert_return (invoke "fib-f64" (f64.const 0x1.4p+4)) (f64.const 0x1.561p+13))
(assert_return (invoke "even" (i32.const 0x0)) (i32.const 0x2c))
(assert_return (invoke "even" (i32.const 0x1)) (i32.const 0x63))
(assert_return (invoke "even" (i32.const 0x64)) (i32.const 0x2c))
(assert_return (invoke "even" (i32.const 0x4d)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x0)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x1)) (i32.const 0x2c))
(assert_return (invoke "odd" (i32.const 0xc8)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x4d)) (i32.const 0x2c))
(assert_exhaustion (invoke "runaway") "call stack exhausted")
(assert_exhaustion (invoke "mutual-runaway") "call stack exhausted")
(assert_return (invoke "as-select-first") (i32.const 0x132))
(assert_return (invoke "as-select-mid") (i32.const 0x2))
(assert_return (invoke "as-select-last") (i32.const 0x2))
(assert_return (invoke "as-if-condition") (i32.const 0x1))
(assert_return (invoke "as-br_if-first") (i64.const 0x164))
(assert_return (invoke "as-br_if-last") (i32.const 0x2))
(assert_return (invoke "as-br_table-first") (f32.const 0x1.e64p+11))
(assert_return (invoke "as-br_table-last") (i32.const 0x2))
(assert_return (invoke "as-store-first"))
(assert_return (invoke "as-store-last"))
(assert_return (invoke "as-memory.grow-value") (i32.const 0x1))
(assert_return (invoke "as-return-value") (i32.const 0x1))
(assert_return (invoke "as-drop-operand"))
(assert_return (invoke "as-br-value") (f32.const 0x1p+0))
(assert_return (invoke "as-local.set-value") (f64.const 0x1p+0))
(assert_return (invoke "as-local.tee-value") (f64.const 0x1p+0))
(assert_return (invoke "as-global.set-value") (f64.const 0x1p+0))
(assert_return (invoke "as-load-operand") (i32.const 0x1))
(assert_return (invoke "as-unary-operand") (f32.const 0x0p+0))
(assert_return (invoke "as-binary-left") (i32.const 0xb))
(assert_return (invoke "as-binary-right") (i32.const 0x9))
(assert_return (invoke "as-test-operand") (i32.const 0x0))
(assert_return (invoke "as-compare-left") (i32.const 0x1))
(assert_return (invoke "as-compare-right") (i32.const 0x1))
(assert_return (invoke "as-convert-operand") (i64.const 0x1))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\91\80\80\80\00\03\60"
  "\02\7f\7f\01\7f\60\00\00\60\03\7f\7f\7f\01\7f\03"
  "\8a\80\80\80\00\09\00\00\00\00\00\01\02\02\02\04"
  "\8c\80\80\80\00\03\70\01\02\02\70\01\03\03\70\00"
  "\04\07\9c\80\80\80\00\03\06\63\61\6c\6c\2d\31\00"
  "\06\06\63\61\6c\6c\2d\32\00\07\06\63\61\6c\6c\2d"
  "\33\00\08\09\ad\80\80\80\00\04\04\41\00\0b\02\d2"
  "\00\0b\d2\01\0b\06\01\41\00\0b\70\03\d2\02\0b\d2"
  "\03\0b\d2\04\0b\02\02\41\00\0b\00\02\01\02\02\02"
  "\41\03\0b\00\01\05\0a\f4\80\80\80\00\09\87\80\80"
  "\80\00\00\20\00\20\01\6a\0b\87\80\80\80\00\00\20"
  "\00\20\01\6b\0b\87\80\80\80\00\00\20\00\20\01\6c"
  "\0b\87\80\80\80\00\00\20\00\20\01\6e\0b\87\80\80"
  "\80\00\00\20\00\20\01\70\0b\82\80\80\80\00\00\0b"
  "\8b\80\80\80\00\00\20\00\20\01\20\02\11\00\00\0b"
  "\8b\80\80\80\00\00\20\00\20\01\20\02\11\00\01\0b"
  "\8b\80\80\80\00\00\20\00\20\01\20\02\11\00\02\0b"
)
(module instance)
(assert_return
  (invoke "call-1" (i32.const 0x2) (i32.const 0x3) (i32.const 0x0))
  (i32.const 0x5)
)
(assert_return
  (invoke "call-1" (i32.const 0x2) (i32.const 0x3) (i32.const 0x1))
  (i32.const 0xffff_ffff)
)
(assert_trap
  (invoke "call-1" (i32.const 0x2) (i32.const 0x3) (i32.const 0x2))
  "undefined element"
)
(assert_return
  (invoke "call-2" (i32.const 0x2) (i32.const 0x3) (i32.const 0x0))
  (i32.const 0x6)
)
(assert_return
  (invoke "call-2" (i32.const 0x2) (i32.const 0x3) (i32.const 0x1))
  (i32.const 0x0)
)
(assert_return
  (invoke "call-2" (i32.const 0x2) (i32.const 0x3) (i32.const 0x2))
  (i32.const 0x2)
)
(assert_trap
  (invoke "call-2" (i32.const 0x2) (i32.const 0x3) (i32.const 0x3))
  "undefined element"
)
(assert_return
  (invoke "call-3" (i32.const 0x2) (i32.const 0x3) (i32.const 0x0))
  (i32.const 0xffff_ffff)
)
(assert_return
  (invoke "call-3" (i32.const 0x2) (i32.const 0x3) (i32.const 0x1))
  (i32.const 0x6)
)
(assert_trap
  (invoke "call-3" (i32.const 0x2) (i32.const 0x3) (i32.const 0x2))
  "uninitialized element"
)
(assert_trap
  (invoke "call-3" (i32.const 0x2) (i32.const 0x3) (i32.const 0x3))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "call-3" (i32.const 0x2) (i32.const 0x3) (i32.const 0x4))
  "undefined element"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7e\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01\87"
    "\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01"
    "\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\98\80\80\80\00\01\92\80\80\80\00"
    "\00\44\00\00\00\00\00\00\00\40\41\01\41\00\11\00"
    "\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\01\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8f\80\80\80\00\01\89"
    "\80\80\80\00\00\41\00\42\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\01\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\41\01\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7c\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\44\00\00\00\00\00\00\f0\3f\41"
    "\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\41\01\44\00\00\00\00\00\00\f0"
    "\3f\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80\00"
    "\01\04\41\00\0b\01\d2\00\0b\0a\97\80\80\80\00\02"
    "\82\80\80\80\00\00\0b\8a\80\80\80\00\00\02\40\41"
    "\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80"
    "\00\01\04\41\00\0b\01\d2\00\0b\0a\99\80\80\80\00"
    "\02\82\80\80\80\00\00\0b\8c\80\80\80\00\00\02\40"
    "\41\00\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80\00"
    "\01\04\41\00\0b\01\d2\00\0b\0a\97\80\80\80\00\02"
    "\82\80\80\80\00\00\0b\8a\80\80\80\00\00\03\40\41"
    "\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80"
    "\00\01\04\41\00\0b\01\d2\00\0b\0a\99\80\80\80\00"
    "\02\82\80\80\80\00\00\0b\8c\80\80\80\00\00\03\40"
    "\41\00\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\83\80\80\80\00\02\00\01\04"
    "\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80\00"
    "\01\04\41\00\0b\01\d2\00\0b\0a\9b\80\80\80\00\02"
    "\82\80\80\80\00\00\0b\8e\80\80\80\00\00\41\00\41"
    "\00\04\40\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\83\80\80\80\00\02\00\01"
    "\04\85\80\80\80\00\01\70\01\01\01\09\89\80\80\80"
    "\00\01\04\41\00\0b\01\d2\00\0b\0a\9d\80\80\80\00"
    "\02\82\80\80\80\00\00\0b\90\80\80\80\00\00\41\00"
    "\41\00\04\40\41\00\41\00\11\00\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\6f\00\0a\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\11\01\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\91\80\80\80\00\01\8b\80\80\80\00"
    "\00\41\00\11\94\98\db\e2\03\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\01\0a\96\80\80\80\00\01\90"
    "\80\80\80\00\00\41\01\04\40\41\00\11\ff\ff\ff\ff"
    "\0f\00\0b\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
    "\01\02\02\09\8c\80\80\80\00\01\04\41\00\0b\02\d2"
    "\00\0b\d2\00\0b"
  )
  "unknown function"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
  "\00\00\60\00\01\7f\03\8c\80\80\80\00\0b\00\00\00"
  "\00\00\00\00\00\00\01\01\04\84\80\80\80\00\01\70"
  "\00\01\0a\92\81\80\80\00\0b\86\80\80\80\00\00\00"
  "\11\00\00\0b\87\80\80\80\00\00\00\11\00\00\01\0b"
  "\89\80\80\80\00\00\00\11\00\00\11\00\00\0b\89\80"
  "\80\80\00\00\00\11\00\00\11\00\00\0b\8c\80\80\80"
  "\00\00\00\11\00\00\11\00\00\11\00\00\0b\86\80\80"
  "\80\00\00\00\11\00\00\0b\86\80\80\80\00\00\00\11"
  "\00\00\0b\89\80\80\80\00\00\00\11\00\00\11\00\00"
  "\0b\89\80\80\80\00\00\00\11\00\00\11\00\00\0b\87"
  "\80\80\80\00\00\00\11\00\00\1b\0b\8a\80\80\80\00"
  "\00\00\11\00\00\1b\11\00\00\0b"
)
(module instance)
